--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "locomotive-scroll": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.0"
+    "react-icons": "^5.0.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
